# VibingIde

./: .gitignore  Cargo.toml  DONE.md  README.md  TODO.md  WORKFLOW.md  apply_dynamic.py  apply_dynamic_rust.rs  apply_final.rs  apply_func.rs  apply_icons.rs  apply_screens.rs  apply_shell.py  apply_shell.rs  apply_topbar.rs  download_fonts.py  err.txt  errors.txt  fix.rs  shell_methods.rs  workflow.md
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: architecture.md  data-model.md  roadmap.md  specs.md
scripts/: launch-vibingide.ps1  launch-vibingide.sh  update-linux-shortcuts.sh  update-shortcuts.ps1
src/: app.rs  config.rs  main.rs  path_utils.rs
src/engine/: mod.rs  panel_manager.rs  project.rs  session_manager.rs
src/history/: event.rs  mod.rs  store.rs
src/input/: handler.rs  keybinds.rs  mod.rs
src/pty/: ansi.rs  mod.rs  reader.rs  supervisor.rs
src/ui/: agent_panel.rs  file_tree.rs  history_list.rs  hit_test.rs  keybind_overlay.rs  layout.rs  left_panel.rs  mod.rs  right_panel.rs  toolbar.rs
stitch-ui/agent_command_center_desktop/: code.html
stitch-ui/agent_command_center_mobile_landscape/: code.html
stitch-ui/main_workspace_desktop/: code.html
stitch-ui/main_workspace_mobile_portrait/: code.html
stitch-ui/settings_config_desktop/: code.html
stitch-ui/vibingide_hacker_chic/: DESIGN.md
